Sun Dec 02 14:52:39 2001  George Lebl <jirka@5z.com>

	* foobar-widget.c: fix pixmap loading, do Applications/Actions
	  setup as from nils's proposal (sort of).  Still needs a lot of
	  work.

2001-12-01  Seth Nickell  <snickell@stanford.edu>

	* foobar-widget.c: (foobar_widget_instance_init):

	Change menu name to "Applications" per Nils' panel
	menu design.
	
	* menu.c: (image_menu_shown):

	Icons for upper most menus should be loaded first. Most users
	start reading from top to bottom. When you load icons
	from bottom to top scanning is essentially disrupted until
	all icons are loaded.
	
Sat Dec 01 22:44:28 2001  George Lebl <jirka@5z.com>

	* menu.c: get rid of the large icon stuff, if we already have 
	  a GtkImage for the file we're looking for loaded, just use that,
	  makes the KDE screensaver menu icons load faster then a speeding
	  bullet (among others:).  Also fix the horizontal jump by directly
	  setting the empty image requisition.

Sat Dec 01 21:21:17 2001  George Lebl <jirka@5z.com>

	* menu.c: removed a bit of the jumpiness effect due to menu icons,
	  there is a horizontal one left which I don't understand.  Make sure
	  foldres without an icon get the folder icon.  Only load icons
	  after the item has been shown, meaning that preloading menus won't
	  start hogging the disk, also when an item is hidden it's no
	  longer loaded.  Change behaviour to FILO so that most recently
	  shown items get loaded first.

2001-12-01  Seth Nickell  <snickell@stanford.edu>

	* menu.c: (load_icons_handler), (show_item_menu),
	(setup_full_menuitem_with_size), (start_favourites_menu),
	(create_menuitem), (create_menu_at_fr), (applet_menu_append),
	(create_add_panel_submenu), (setup_menuitem_try_pixmap),
	(make_add_submenu), (make_panel_submenu), (create_panel_submenu),
	(create_desktop_menu), (add_distribution_submenu),
	(add_kde_submenu), (create_root_menu), (load_menu_applet),
	(load_menu_image_deferred):
