@@ -1,3 +1,7 @@
+Sun Dec 02 15:11:31 2001  George Lebl <jirka@5z.com>
+
+	* foobar-widget.c: get rid of some deprecated menu_bar function usage
+
 Sun Dec 02 14:52:39 2001  George Lebl <jirka@5z.com>
 
 	* foobar-widget.c: fix pixmap loading, do Applications/Actions
